Handle errors on User Service, AuthenticationService created, some minor bugs fixed